--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/RyanDOShea/rp-game-application#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.3",
+    "json-fs-store": "^1.0.1"
   }
 }
